# Beryl

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
example/: main.cpp
src/: beryl.hpp  core.cpp  core.hpp  main.cpp  utils.cpp
